# mdreport

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.claude/: settings.json
.github/workflows/: build.yml  publish-crate.yml  release.yml  visual-regression.yml
src/: lib.rs  main.rs  parse.rs
src/fmt/: email.rs  html.rs  mod.rs  pdf.rs
src/layout/: line_break.rs  mod.rs
tests/: exhaustive_visual_regression.rs
