[package]
name = "mdreport"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { version = "4.5", default-features = false, features = ["derive", "std", "help"] }
lopdf = { version = "0.38", default-features = false}
pulldown-cmark = { version = "0.13.0", default-features = false, features = ["html"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.9" }
syntect = { version = "5.3", default-features = false, features = ["default-syntaxes", "default-themes", "parsing", "regex-onig"]  }
